--- a/1_programming/23_dosdonts.ipynb
+++ b/1_programming/23_dosdonts.ipynb
@@ -49,7 +49,9 @@
     "\n",
     "This is particularly true for line graphs. If the aspect ratio is not 1:1, then the slope of the line will be distorted. The steepness of apparent _trends_ in a line plot is a function of aspect ratio. Aim for 45° lines or Golden ratio ($\\approx 1.618$) as most interpretable.\n",
     "\n",
+    "<center>\n",
     "<img width=\"70%\" src=\"https://raw.githubusercontent.com/fahadsultan/datascience_ml/main/assets/aspect1.png\">\n",
+    "</center>\n",
     "\n",
     "<!-- <img src=\"https://miro.medium.com/v2/resize:fit:11998/1*7pfffHqyf4ZnZ91cDMGzrQ.jpeg\"> -->\n",
     "\n",
@@ -70,7 +72,7 @@
     "<img width=\"70%\" src=\"https://raw.githubusercontent.com/fahadsultan/datascience_ml/main/assets/ranges2.png\">\n",
     "</center>\n",
     "\n",
-    "### Use the right colors for your Data\n",
+    "### Use the right colors\n",
     "\n",
     "If the data is categorical, then use qualitative colormaps. If your data ranges from negative to positive values use divergent colormaps. If your data ranges from low to high values, then use sequential colormaps.\n",
     "\n",
@@ -84,10 +86,8 @@
     "\n",
     "Othwerwise, the data will be difficult to interpret as the viewer will not know which data point corresponds to which value on the x-axis. Example of an unordered x-axis:\n",
     "\n",
-    "<img src=\"https://i.imgur.com/0qVlR6P.png\">\n",
+    "<center><img width=\"60%\" src=\"https://i.imgur.com/0qVlR6P.png\"></center>\n",
     "\n",
-    "\n",
-    "## Donts ❌\n",
     "\n",
     "\n"
    ]
@@ -97,6 +97,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Donts ❌\n",
+    "\n",
     "### Forget to label\n",
     "\n",
     "All visualizations should have at minimum contain the following: \n",
@@ -113,7 +115,14 @@
     "\n",
     "<br/>\n",
     "\n",
-    "Note that the figure above is missing axis labels. No, _\"wave1\"_, _\"wave2\"_, _\"wave3\"_ and _\"wave4\"_ are not proper  labels for the x-axis. _\"Are we stuck?\"_ is also not a very informative title.\n",
+    "Note that the figure above is missing axis labels. No, _\"wave1\"_, _\"wave2\"_, _\"wave3\"_ and _\"wave4\"_ are not proper  labels for the x-axis. _\"Are we stuck?\"_ is also not a very informative title.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "### Scale Distortion\n",
     "\n",
@@ -127,7 +136,14 @@
     "\n",
     "<!-- <center>\n",
     "<img width=\"70%\" src=\"https://raw.githubusercontent.com/fahadsultan/datascience_ml/main/assets/scale1.png\">\n",
-    "</center> -->\n",
+    "</center> -->\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "### Use uneven ranges\n",
     "\n",
@@ -135,7 +151,14 @@
     "\n",
     "<center>\n",
     "<img width=\"70%\" src=\"https://raw.githubusercontent.com/fahadsultan/datascience_ml/main/assets/ranges1.png\">\n",
-    "</center>\n",
+    "</center>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "### Use line graphs where the x-axis is not time\n",
     "\n",
@@ -145,12 +168,12 @@
     "<img width=\"70%\" src=\"https://raw.githubusercontent.com/fahadsultan/datascience_ml/main/assets/line2.png\">\n",
     "</center>\n",
     "\n",
-    "### Use sequential colormaps for categorical data\n",
+    "### Use the wrong colors\n",
     "\n",
     "If the data is categorical, then use qualitative colormaps. Do not use sequential colormaps.\n",
     "\n",
     "<center>\n",
-    "<img width=\"70%\" src=\"https://raw.githubusercontent.com/fahadsultan/datascience_ml/main/assets/scale3.png\">\n",
+    "<img width=\"50%\" src=\"https://raw.githubusercontent.com/fahadsultan/datascience_ml/main/assets/scale3.png\">\n",
     "</center>\n",
     "\n",
     "\n",
