--- a/2_maths/13_log.ipynb
+++ b/2_maths/13_log.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Variability Measures"
+    "# Logarithms"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Standard Deviation "
+    "<!-- ## Standard Deviation  -->"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Variance"
+    "<!-- ## Variance -->"
    ]
   },
   {
