Adding sklearn examples to classification

--- a/3_problems_in/40_supervised.ipynb
+++ b/3_problems_in/40_supervised.ipynb
@@ -44,9 +44,80 @@
     "There are two primary types of supervised learning problems:\n",
     "\n",
     "1. **Classification** - when the target variable $\\mathcal{y}$ is categorical\n",
-    "2. **Regression** - when the target variable $\\mathcal{y}$ is continuous\n",
+    "2. **Regression** - when the target variable $\\mathcal{y}$ is continuous"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr/>\n",
     "\n",
-    "<br/>\n"
+    "**Example Dataset**\n",
+    "\n",
+    "The code below loads the `iris` dataset from the `sklearn` library. This dataset is a classic example of a classification problem.\n",
+    "\n",
+    "<center><img width=\"60%\" src=\"https://editor.analyticsvidhya.com/uploads/51518iris%20img1.png\"></center>\n",
+    "\n",
+    "`X` is a `pandas DataFrame` with 4 columns and 150 rows. Each row represents a flower and each column represents a feature of the flower. The features are:\n",
+    "\n",
+    "1. sepal length in cm\n",
+    "2. sepal width in cm\n",
+    "3. petal length in cm\n",
+    "4. petal width in cm\n",
+    "\n",
+    "`y` is a `pandas Series` with 150 rows. Each row represents the species of the flower. The species are:\n",
+    "\n",
+    "1. Iris Setosa\n",
+    "2. Iris Versicolour\n",
+    "3. Iris Virginica\n",
+    "\n",
+    "The goal is to predict the species of a flower given its features.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "================= X - Features ==================\n",
+      "\n",
+      "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+      "73                 6.1               2.8                4.7               1.2\n",
+      "18                 5.7               3.8                1.7               0.3\n",
+      "118                7.7               2.6                6.9               2.3\n",
+      "78                 6.0               2.9                4.5               1.5\n",
+      "76                 6.8               2.8                4.8               1.4\n",
+      "\n",
+      "============== y (Classification) ==============\n",
+      "\n",
+      "73     1\n",
+      "18     0\n",
+      "118    2\n",
+      "78     1\n",
+      "76     1\n",
+      "Name: target, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_iris\n",
+    "\n",
+    "data = load_iris(as_frame=True)\n",
+    "X    = data['data']\n",
+    "y    = data['target']\n",
+    "\n",
+    "print(\"\\n================= X - Features ==================\\n\")\n",
+    "print(X.sample(5, random_state=42))\n",
+    "print(\"\\n============== y (Classification) ==============\\n\")\n",
+    "print(y.sample(5, random_state=42))"
    ]
   },
   {
@@ -86,6 +157,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Code Example\n",
+    "\n",
+    "The code below uses the **`train_test_split`** function from the `sklearn` library to split the data into train and test sets.\n",
+    "\n",
+    "The `test_size` parameter is set to `0.2` which means that 20% of the data will be used for testing and the remaining 80% will be used for training.\n",
+    "\n",
+    "The `random_state` parameter is set to `42` which means that the random number generator will be initialized to a known state. This ensures that the results are reproducible."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train set:\n",
+      " X_train.shape = (112, 4) , y_train.shape = (112,)\n",
+      "Test set: \n",
+      " X_test.shape = (38, 4) , y_test.shape = (38,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42)\n",
+    "\n",
+    "print(\"Train set:\\n X_train.shape =\", X_train.shape, \", y_train.shape =\", y_train.shape)\n",
+    "print(\"Test set: \\n X_test.shape =\",  X_test.shape,  \", y_test.shape =\",  y_test.shape)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## Training Phase\n",
     "\n",
@@ -110,13 +220,112 @@
     "where x is the input temperature in Celsius and f(x) is the output temperature in Fahrenheit.\n",
     "\n",
     "The above is just an example and there exist many other families of functions that we can consider. These will be covered in Chapters 10-13. \n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Code Example\n",
     "\n",
+    "The code below uses K-Nearest Neighbors (KNN) to learn the relationship between the features and the target variable.\n",
+    "\n",
+    "**The `fit` method is used to _train_ the model**. The `fit` method takes two arguments:\n",
+    "\n",
+    "1. `X_train` - the features of the training data\n",
+    "2. `y_train` - the target variable of the training data\n",
+    "\n",
+    "The `fit` method learns the relationship between the features and the target variable and stores it in the model object.\n",
+    "\n",
+    "The `fit` method is common to all models in `sklearn` and is used to train the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultinomialNB()"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "\n",
+    "classifier = MultinomialNB()\n",
+    "\n",
+    "classifier.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Testing Phase\n",
     "\n",
     "Once we have learned the function $f$ from the training data, we can apply it to the test data to predict the target variable $\\mathcal{y}$.\n",
     "\n",
     "<img src=\"../assets/testing.png\">\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Code Example\n",
     "\n",
+    "The code below uses the `predict` method to predict the target variable for the test data.\n",
+    "\n",
+    "**The `predict` method is used to _test_ the model**. The `predict` method takes one argument:\n",
+    "\n",
+    "1. `X_test` - the features of the test data\n",
+    "\n",
+    "The `predict` method applies the learned function $f$ to the test data and returns the predicted target variable.\n",
+    "\n",
+    "The `predict` method is common to all models in `sklearn` and is used to test the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0, 2, 1, 1, 0, 1, 2, 1, 1, 2, 0, 0, 0, 0, 1, 2, 1, 1, 2, 0, 2,\n",
+       "       0, 2, 1, 2, 2, 2, 0, 0, 0, 0, 1, 0, 0, 2, 1, 0])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds = classifier.predict(X_test)\n",
+    "\n",
+    "preds"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Evaluation\n",
     "\n",
     "If supervised learning is like school, then the evaluation phase is like the grading phase and criteria. \n",
@@ -125,24 +334,125 @@
     "\n",
     "The exact criteria for evaluation depends on the type of supervised learning problem. That is, evaluation metrics used for classification problems are different from those used for regression problems. These metrics are discussed in detail in the following chapters. \n",
     "\n",
-    "<!-- Finally, we evaluate the performance of our model by comparing the predicted values of $\\mathcal{y}$ to the actual values of $\\mathcal{y}$. -->\n",
+    "<!-- Finally, we evaluate the performance of our model by comparing the predicted values of $\\mathcal{y}$ to the actual values of $\\mathcal{y}$. -->\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Code Example\n",
+    "\n",
+    "The code below uses the `accuracy_score` method to evaluate the performance of the model.\n",
+    "\n",
+    "**The `accuracy_score` method is used to _evaluate_ the model**. The `accuracy_score` method takes two arguments:\n",
+    "\n",
+    "1. `y_test` - the actual target variable of the test data\n",
+    "2. `y_pred` - the predicted target variable of the test data\n",
+    "\n",
+    "The `accuracy_score` method compares the predicted target variable to the actual target variable and returns the accuracy of the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9736842105263158"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "accuracy_score(y_test, preds)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## Cross Validation\n",
     "\n",
     "Just as most courses in school don't have just the final test, most machine learning problems don't have just one test set either. Often times, it is better to create multiple test sets, evaluate the performance of the model on each of them and then report the average performance of the model. This practice is called **cross validation** in machine learning. \n",
     "\n",
+    "<center><img width=\"70%\" src=\"https://scikit-learn.org/stable/_images/grid_search_cross_validation.png\"></center>\n",
+    "\n",
     "There exist many different ways to create multiple test sets. The most common way is to randomly split the data into multiple randomly sampled train and test sets. This is called **random cross validation**."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\n",
+    "### Code Example\n",
+    "\n",
+    "The code below uses the `cross_val_score` method to perform random cross validation.\n",
+    "\n",
+    "**The `cross_val_score` method is used to _cross validate_ the model**. The `cross_val_score` method takes four arguments:\n",
+    "\n",
+    "1. `estimator` - the model object\n",
+    "2. `X` - the features of the data\n",
+    "3. `y` - the target variable of the data\n",
+    "4. `cv` - the number of cross validation splits\n",
+    "\n",
+    "The `cross_val_score` method performs random cross validation and returns an evaluation metric of the model for each split."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.        , 0.96666667, 0.9       , 0.9       , 1.        ])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "scores = cross_val_score(classifier, X, y, cv=5, scoring='accuracy')\n",
+    "\n",
+    "scores"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
